--- a/vibgyor_mapview/Base.lproj/Main.storyboard
+++ b/vibgyor_mapview/Base.lproj/Main.storyboard
@@ -1,25 +1,132 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="rCN-BF-zIg">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--secondViewController-->
+        <scene sceneID="aFJ-gC-LKN">
+            <objects>
+                <viewController title="secondViewController" id="8Ba-V3-fQ4" customClass="secondViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3kT-qS-QlQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="IFS-e0-WCk"/>
+                    </layoutGuides>
+                    <view key="view" opaque="NO" contentMode="scaleToFill" id="ZXl-SM-ZaY">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VOT-Hv-BZA">
+                                <rect key="frame" x="-20" y="132" width="361" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <state key="normal" title="Show Epoch">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="reminderButton:" destination="8Ba-V3-fQ4" eventType="touchUpInside" id="WGt-eE-Z4Z"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Njw-dG-D49">
+                                <rect key="frame" x="30" y="255" width="261" height="58"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" cocoaTouchSystemColor="lightTextColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.99642911789999999" green="1" blue="0.65108489849999995" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="JoL-HP-jW2"/>
+                    <connections>
+                        <outlet property="label2" destination="Njw-dG-D49" id="tg9-Lu-naj"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zDT-gW-hbh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="469.33333333333331" y="-85.200000000000003"/>
+        </scene>
+        <!--firstViewController-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController title="firstViewController" id="vXZ-lx-hvc" customClass="firstViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
+                        <viewControllerLayoutGuide type="top" id="8Tc-ov-pRa"/>
+                        <viewControllerLayoutGuide type="bottom" id="JQ7-SE-jR5"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <segmentedControl contentMode="scaleToFill" fixedFrame="YES" highlighted="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="dnf-Jb-nXS">
+                                <rect key="frame" x="54" y="36" width="223" height="29"/>
+                                <color key="backgroundColor" red="0.99642911789999999" green="1" blue="0.65108489849999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <segments>
+                                    <segment title="Normal"/>
+                                    <segment title="Satellite"/>
+                                    <segment title="Hybrid"/>
+                                </segments>
+                                <color key="tintColor" red="0.57864975745325675" green="0.26850290307883695" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="segmentedControl4:" destination="vXZ-lx-hvc" eventType="valueChanged" id="Yif-pu-lGU"/>
+                                    <action selector="segmentedControl5:" destination="vXZ-lx-hvc" eventType="valueChanged" id="gxF-dH-Lj9"/>
+                                </connections>
+                            </segmentedControl>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SML-fs-DAo">
+                                <rect key="frame" x="-135" y="121" width="600" height="486"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fbf-j1-ikR">
+                                <rect key="frame" x="87" y="72" width="147" height="30"/>
+                                <state key="normal" title="Save Parking Spot"/>
+                                <connections>
+                                    <action selector="storeParkingLocation:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Yqs-em-A3O"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qmL-FC-20q">
+                                <rect key="frame" x="85" y="99" width="149" height="30"/>
+                                <state key="normal" title="Take me back!">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="routeFromLocation:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="qTV-bq-5ov"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="koe-bF-Xe2"/>
+                    <connections>
+                        <outlet property="mapView" destination="SML-fs-DAo" id="FPi-zq-xwJ"/>
+                        <outlet property="routeFromLocation" destination="qmL-FC-20q" id="mnf-oE-wg8"/>
+                        <outlet property="segmentedControl3" destination="dnf-Jb-nXS" id="Hdn-f4-iJf"/>
+                        <outlet property="storeParkingLocationOutlet" destination="fbf-j1-ikR" id="zfz-TF-xeI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="469" y="713"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="5XI-DC-z4C">
+            <objects>
+                <tabBarController id="rCN-BF-zIg" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="BWk-Qm-8bu">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="8Ba-V3-fQ4" kind="relationship" relationship="viewControllers" id="FYN-2q-bHW"/>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="viewControllers" id="jwr-v1-rMs"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="u7t-2n-GiU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="24.533333333333331" y="189.33333333333334"/>
         </scene>
     </scenes>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
